--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "proptypes": "1.1.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
     "uuid": "3.3.3"
