--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "proptypes": "1.1.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-webview": "7.5.2",
     "uuid": "3.3.3"
   },
   "devDependencies": {
